--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,4 +2,4 @@
 port: 8090
 log_level: debug
 store:
-  dsn: "host=localhost dbname=restapi_dev sslmode=disable"
+  dsn: "postgresql://postgres:12345@localhost:5432/postgres"
