--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,4 +2,4 @@
 port: 8090
 log_level: debug
 store:
-  dsn: "postgresql://postgres:12345@localhost:5432/postgres"
+  dsn: "postgresql://timofey:12345@localhost:5432/restapi_dev"
